--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,42 +1,65 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@import "tailwindcss";
+
+/* home page design */
+.home-container {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  /* border: 1px solid red; */
+  height: 100vh;
+  width: 100vw;
+  /* gap: 0.1rem; */
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.dashboard-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 15vw;
+  background-color: #262c40;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.dashboard-icon-text {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  border: 1px solid #262c40;
+  border-radius: 0.5rem;
+  gap: 20px;
+  padding: 0.7rem;
+  margin-bottom: 2rem;
+  background-color: #1864774d;
+  width: 10rem;
+  color: whitesmoke;
+  cursor: pointer;
+}
+.dashboard-icons{
+  height: 25px;
+  width: 25px;
+}
+
+.home-section-container {
+  /* border: 1px solid yellow; */
+  height: 100%;
+  width: 88vw;
+  background-color: #0f1016;
+}
+
+.navbar-section {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #262c40;
+  color: whitesmoke;
+  padding: 1rem;
+  box-shadow: 1px 2px 8px 0px rgba(194, 194, 194, 0.384);
+
+  .navbar-sub-section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
